--- a/intranet/htdocs/intranet-tmpl/estantes/verEstante.tmpl
+++ b/intranet/htdocs/intranet-tmpl/estantes/verEstante.tmpl
@@ -1,37 +1,39 @@
-<fieldset class="resultados_busqueda">
-<legend class="titulo_legend trigger click">[% "Estantes" | i18n %]</legend>
-        <div class="datos_tabla_div_estantes">
-            <div class="botonera_estantes">
-            <div id="boton_nuevo_estante_0">
-            [% PERL %]
-                                print C4::AR::Filtros::to_Icon(
-                                                                    boton   => "icon_agregar",
-                                                                    title   => "[% 'Agregar estante' | i18n %]",
-                                                                    onClick => "agregarNuevoEstante();",
-                                        ) ;
-            [% END %]
+
+<div id="estante">
+    <fieldset class="resultados_busqueda">
+        <legend class="titulo_legend trigger click">[% "Estantes" | i18n %]</legend>
+            <div class="datos_tabla_div_estantes">
+            
+                  <ul class="unstyled">
+                      [% FOREACH estante IN ESTANTES %]
+                          <li>
+                              <input type=checkbox name="[% estante.getEstante %]" value="[% estante.getId %]">
+                              <a class="click" onClick="verSubEstantes([% estante.getId %],0)">[% estante.getEstante %]</a>
+                          </li>
+                      [% END %]
+                  </ul>
+
+                  <div class="form-actions">
+                        [% IF cant_estantes %]
+                              [% PERL %]
+                                            print C4::AR::Filtros::action_button(
+                                                                                button  => "btn btn-danger",
+                                                                                action => "borrarEstantesSeleccionados(0,0);",
+                                                                                title   => "[% 'Borrar seleccionados' | i18n %]",
+                                                    ) ;
+                              [% END %]
+                        [% END %]
+
+                        [% PERL %]
+                                            print C4::AR::Filtros::action_button(
+                                                                                button   => "btn btn-primary",
+                                                                                title   => "[% 'Agregar estante' | i18n %]",
+                                                                                action => "agregarNuevoEstante();",
+                                                    ) ;
+                        [% END %]
+                        
+                  </div>
             </div>
+    </fieldset>
+</div>
 
-      [% IF cant_estantes %]
-            [% PERL %]
-                                print C4::AR::Filtros::to_Icon(
-                                                                    boton   => "icon_borrar",
-                                                                    onClick => "borrarEstantesSeleccionados(0,0);",
-                                                                    title   => "[% 'Borrar seleccionados' | i18n %]",
-                                        ) ;
-            [% END %]
-        [% END %]
-
-            </div>
-
-           <ul class="ul_tabla_div_estante_0" >
-            [% FOREACH estante IN ESTANTES %]
-             <li>
-            <input type=checkbox name="[% estante.getEstante %]" value="[% estante.getId %]">
-             <a class="click" onClick="verSubEstantes([% estante.getId %],0)">[% estante.getEstante %]</a>
-            </li>
-            [% END %]
-                </ul>
-
-        </div>
-</fieldset>
